DB 구조 변경 - Users, DrivingPattern, Consumable 테이블
